@@ -11,3 +11,4 @@ PYTHON_VERSION = platform.python_version()
 DJANGO_1_11 = LooseVersion(DJANGO_VERSION) < LooseVersion('2.0')
 DJANGO_2_0 = LooseVersion(DJANGO_VERSION) < LooseVersion('2.1')
 DJANGO_2_1 = LooseVersion(DJANGO_VERSION) < LooseVersion('2.2')
+DJANGO_2_2 = LooseVersion(DJANGO_VERSION) < LooseVersion('3.0')
